--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,42 +1,34 @@
+#html {
+    /* html 여백 없애기 */
+    margin: 0;
+    padding: 0;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+    padding: 0;
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+    max-width: 100vw;
+    margin: 0;
+    padding: 0;
+    /* html 여백 없애기 */
+    font-family: 'Dovemayo_gothic', sans-serif;
+    text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+@font-face {
+    font-family: 'Dovemayo_gothic';
+    font-weight: 400;
+    font-display: swap;
+    src: local('Dovemayo_gothic'),
+        url('./fonts/Dovemayo_gothic.ttf') format('truetype');
 }
