feat: 신규 메인 페이지 추가
1. FullpageScroll 적용
2. 3번째 페이지 미완성

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -25,10 +25,10 @@ p {
     text-align: center;
 }
 
-@font-face {
+/* @font-face {
     font-family: 'Dovemayo_gothic';
     font-weight: 400;
     font-display: swap;
     src: local('Dovemayo_gothic'),
         url('./fonts/Dovemayo_gothic.ttf') format('truetype');
-}
+} */
