--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -26,6 +26,12 @@ p {
 }
 
 /* @font-face {
+    font-family: "Pretendard-Regular";
+    font-weight: normal;
+    src: url("./fonts/Pretendard-Regular.otf") format("truetype");
+  } */
+  
+/* @font-face {
     font-family: 'Dovemayo_gothic';
     font-weight: 400;
     font-display: swap;
