--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -29,7 +29,14 @@ p {
     font-family: "Pretendard-Regular";
     font-weight: normal;
     src: url("./fonts/Pretendard-Regular.otf") format("truetype");
-  }
+}
+
+@font-face {
+    font-family: 'WavvePADO-Regular';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2404@1.0/WavvePADO-Regular.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
   
 /* @font-face {
     font-family: 'Dovemayo_gothic';
