fix: 시험 문제 설정 및 프로그래스 바 CSS 수정
폰트, 텍스트 및 위치 수정

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -32,8 +32,8 @@ p {
 }
 
 @font-face {
-    font-family: 'WavvePADO-Regular';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2404@1.0/WavvePADO-Regular.woff2') format('woff2');
+    font-family: 'GmarketSansMedium';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
